parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> command
Rule 1     command -> booking
Rule 2     command -> command booking
Rule 3     command -> status
Rule 4     command -> command status
Rule 5     command -> view
Rule 6     command -> command view
Rule 7     command -> selection
Rule 8     command -> command selection
Rule 9     command -> sorting
Rule 10    command -> command sorting
Rule 11    command -> fetching
Rule 12    command -> command fetching
Rule 13    command -> speech
Rule 14    command -> region
Rule 15    command -> command region
Rule 16    command -> reservation
Rule 17    command -> command reservation
Rule 18    command -> listing
Rule 19    command -> command listing
Rule 20    command -> payment
Rule 21    command -> command payment
Rule 22    command -> dummy
Rule 23    dummy -> ID
Rule 24    booking -> BOOK NUMBER TICKETS FOR STRING ON DATE
Rule 25    booking -> BOOK NUMBER TICKETS FOR STRING ON
Rule 26    booking -> BOOK error TICKETS FOR STRING ON DATE
Rule 27    booking -> BOOK NUMBER TICKETS FOR STRING ON error
Rule 28    booking -> BOOK NUMBER TICKETS FOR error ON DATE
Rule 29    booking -> BOOK error TICKETS FOR error ON DATE
Rule 30    status -> STATUS OF BOOKING BOOKING_ID
Rule 31    status -> STATUS OF TICKETS
Rule 32    status -> STATUS OF BOOKING error
Rule 33    status -> STATUS OF error
Rule 34    status -> STATUS OF
Rule 35    view -> SHOW AVAILABLE TICKETS FOR STRING
Rule 36    view -> SHOW MY RESERVATIONS
Rule 37    view -> SHOW MY CONFIRMED BOOKINGS
Rule 38    view -> SHOW MY PAID TICKETS
Rule 39    view -> SHOW MY CANCELED BOOKINGS
Rule 40    view -> SHOW AVAILABLE TICKETS FOR error
Rule 41    view -> SHOW MY error
Rule 42    view -> SHOW MY error BOOKINGS
Rule 43    view -> SHOW MY error TICKETS
Rule 44    selection -> SELECT TICKET TICKET_ID
Rule 45    selection -> SELECT TICKET error
Rule 46    sorting -> SORT TICKETS BY NUMBER
Rule 47    sorting -> SORT TICKETS BY DATE
Rule 48    sorting -> SORT TICKETS BY error
Rule 49    fetching -> FETCH TICKETS FROM API API_URL
Rule 50    fetching -> FETCH TICKETS FROM API error
Rule 51    speech -> READ OUT MY BOOKING DETAILS
Rule 52    speech -> READ AVAILABLE TICKETS FOR STRING
Rule 53    region -> SHOW AVAILABLE TICKETS IN REGION
Rule 54    region -> SHOW AVAILABLE TICKETS error
Rule 55    reservation -> RESERVE NUMBER FOR STRING ON DATE
Rule 56    reservation -> RESERVE error FOR STRING ON DATE
Rule 57    reservation -> RESERVE NUMBER FOR error ON DATE
Rule 58    reservation -> RESERVE NUMBER FOR STRING ON error
Rule 59    listing -> LIST ALL EVENTS
Rule 60    listing -> LIST error
Rule 61    payment -> PAY FOR BOOKING BOOKING_ID USING PAYMENT_METHOD
Rule 62    payment -> CANCEL BOOKING BOOKING_ID
Rule 63    payment -> PAY FOR BOOKING error USING PAYMENT_METHOD
Rule 64    payment -> PAY FOR BOOKING BOOKING_ID USING error
Rule 65    payment -> CANCEL BOOKING error

Terminals, with rules where they appear

ALL                  : 59
API                  : 49 50
API_URL              : 49
AVAILABLE            : 35 40 52 53 54
BOOK                 : 24 25 26 27 28 29
BOOKING              : 30 32 51 61 62 63 64 65
BOOKINGS             : 37 39 42
BOOKING_ID           : 30 61 62 64
BY                   : 46 47 48
CANCEL               : 62 65
CANCELED             : 39
CONFIRMED            : 37
DATE                 : 24 26 28 29 47 55 56 57
DETAILS              : 51
EVENTS               : 59
FETCH                : 49 50
FOR                  : 24 25 26 27 28 29 35 40 52 55 56 57 58 61 63 64
FROM                 : 49 50
ID                   : 23
IN                   : 53
LIST                 : 59 60
MY                   : 36 37 38 39 41 42 43 51
NUMBER               : 24 25 27 28 46 55 57 58
OF                   : 30 31 32 33 34
ON                   : 24 25 26 27 28 29 55 56 57 58
OUT                  : 51
PAID                 : 38
PAY                  : 61 63 64
PAYMENT_METHOD       : 61 63
READ                 : 51 52
REGION               : 53
RESERVATIONS         : 36
RESERVE              : 55 56 57 58
SELECT               : 44 45
SHOW                 : 35 36 37 38 39 40 41 42 43 53 54
SORT                 : 46 47 48
STATUS               : 30 31 32 33 34
STRING               : 24 25 26 27 35 52 55 56 58
TICKET               : 44 45
TICKETS              : 24 25 26 27 28 29 31 35 38 40 43 46 47 48 49 50 52 53 54
TICKET_ID            : 44
USING                : 61 63 64
error                : 26 27 28 29 29 32 33 40 41 42 43 45 48 50 54 56 57 58 60 63 64 65

Nonterminals, with rules where they appear

booking              : 1 2
command              : 2 4 6 8 10 12 15 17 19 21 0
dummy                : 22
fetching             : 11 12
listing              : 18 19
payment              : 20 21
region               : 14 15
reservation          : 16 17
selection            : 7 8
sorting              : 9 10
speech               : 13
status               : 3 4
view                 : 5 6

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . booking
    (2) command -> . command booking
    (3) command -> . status
    (4) command -> . command status
    (5) command -> . view
    (6) command -> . command view
    (7) command -> . selection
    (8) command -> . command selection
    (9) command -> . sorting
    (10) command -> . command sorting
    (11) command -> . fetching
    (12) command -> . command fetching
    (13) command -> . speech
    (14) command -> . region
    (15) command -> . command region
    (16) command -> . reservation
    (17) command -> . command reservation
    (18) command -> . listing
    (19) command -> . command listing
    (20) command -> . payment
    (21) command -> . command payment
    (22) command -> . dummy
    (24) booking -> . BOOK NUMBER TICKETS FOR STRING ON DATE
    (25) booking -> . BOOK NUMBER TICKETS FOR STRING ON
    (26) booking -> . BOOK error TICKETS FOR STRING ON DATE
    (27) booking -> . BOOK NUMBER TICKETS FOR STRING ON error
    (28) booking -> . BOOK NUMBER TICKETS FOR error ON DATE
    (29) booking -> . BOOK error TICKETS FOR error ON DATE
    (30) status -> . STATUS OF BOOKING BOOKING_ID
    (31) status -> . STATUS OF TICKETS
    (32) status -> . STATUS OF BOOKING error
    (33) status -> . STATUS OF error
    (34) status -> . STATUS OF
    (35) view -> . SHOW AVAILABLE TICKETS FOR STRING
    (36) view -> . SHOW MY RESERVATIONS
    (37) view -> . SHOW MY CONFIRMED BOOKINGS
    (38) view -> . SHOW MY PAID TICKETS
    (39) view -> . SHOW MY CANCELED BOOKINGS
    (40) view -> . SHOW AVAILABLE TICKETS FOR error
    (41) view -> . SHOW MY error
    (42) view -> . SHOW MY error BOOKINGS
    (43) view -> . SHOW MY error TICKETS
    (44) selection -> . SELECT TICKET TICKET_ID
    (45) selection -> . SELECT TICKET error
    (46) sorting -> . SORT TICKETS BY NUMBER
    (47) sorting -> . SORT TICKETS BY DATE
    (48) sorting -> . SORT TICKETS BY error
    (49) fetching -> . FETCH TICKETS FROM API API_URL
    (50) fetching -> . FETCH TICKETS FROM API error
    (51) speech -> . READ OUT MY BOOKING DETAILS
    (52) speech -> . READ AVAILABLE TICKETS FOR STRING
    (53) region -> . SHOW AVAILABLE TICKETS IN REGION
    (54) region -> . SHOW AVAILABLE TICKETS error
    (55) reservation -> . RESERVE NUMBER FOR STRING ON DATE
    (56) reservation -> . RESERVE error FOR STRING ON DATE
    (57) reservation -> . RESERVE NUMBER FOR error ON DATE
    (58) reservation -> . RESERVE NUMBER FOR STRING ON error
    (59) listing -> . LIST ALL EVENTS
    (60) listing -> . LIST error
    (61) payment -> . PAY FOR BOOKING BOOKING_ID USING PAYMENT_METHOD
    (62) payment -> . CANCEL BOOKING BOOKING_ID
    (63) payment -> . PAY FOR BOOKING error USING PAYMENT_METHOD
    (64) payment -> . PAY FOR BOOKING BOOKING_ID USING error
    (65) payment -> . CANCEL BOOKING error
    (23) dummy -> . ID

    BOOK            shift and go to state 14
    STATUS          shift and go to state 15
    SHOW            shift and go to state 16
    SELECT          shift and go to state 17
    SORT            shift and go to state 18
    FETCH           shift and go to state 19
    READ            shift and go to state 20
    RESERVE         shift and go to state 21
    LIST            shift and go to state 22
    PAY             shift and go to state 23
    CANCEL          shift and go to state 24
    ID              shift and go to state 25

    command                        shift and go to state 1
    booking                        shift and go to state 2
    status                         shift and go to state 3
    view                           shift and go to state 4
    selection                      shift and go to state 5
    sorting                        shift and go to state 6
    fetching                       shift and go to state 7
    speech                         shift and go to state 8
    region                         shift and go to state 9
    reservation                    shift and go to state 10
    listing                        shift and go to state 11
    payment                        shift and go to state 12
    dummy                          shift and go to state 13

state 1

    (0) S' -> command .
    (2) command -> command . booking
    (4) command -> command . status
    (6) command -> command . view
    (8) command -> command . selection
    (10) command -> command . sorting
    (12) command -> command . fetching
    (15) command -> command . region
    (17) command -> command . reservation
    (19) command -> command . listing
    (21) command -> command . payment
    (24) booking -> . BOOK NUMBER TICKETS FOR STRING ON DATE
    (25) booking -> . BOOK NUMBER TICKETS FOR STRING ON
    (26) booking -> . BOOK error TICKETS FOR STRING ON DATE
    (27) booking -> . BOOK NUMBER TICKETS FOR STRING ON error
    (28) booking -> . BOOK NUMBER TICKETS FOR error ON DATE
    (29) booking -> . BOOK error TICKETS FOR error ON DATE
    (30) status -> . STATUS OF BOOKING BOOKING_ID
    (31) status -> . STATUS OF TICKETS
    (32) status -> . STATUS OF BOOKING error
    (33) status -> . STATUS OF error
    (34) status -> . STATUS OF
    (35) view -> . SHOW AVAILABLE TICKETS FOR STRING
    (36) view -> . SHOW MY RESERVATIONS
    (37) view -> . SHOW MY CONFIRMED BOOKINGS
    (38) view -> . SHOW MY PAID TICKETS
    (39) view -> . SHOW MY CANCELED BOOKINGS
    (40) view -> . SHOW AVAILABLE TICKETS FOR error
    (41) view -> . SHOW MY error
    (42) view -> . SHOW MY error BOOKINGS
    (43) view -> . SHOW MY error TICKETS
    (44) selection -> . SELECT TICKET TICKET_ID
    (45) selection -> . SELECT TICKET error
    (46) sorting -> . SORT TICKETS BY NUMBER
    (47) sorting -> . SORT TICKETS BY DATE
    (48) sorting -> . SORT TICKETS BY error
    (49) fetching -> . FETCH TICKETS FROM API API_URL
    (50) fetching -> . FETCH TICKETS FROM API error
    (53) region -> . SHOW AVAILABLE TICKETS IN REGION
    (54) region -> . SHOW AVAILABLE TICKETS error
    (55) reservation -> . RESERVE NUMBER FOR STRING ON DATE
    (56) reservation -> . RESERVE error FOR STRING ON DATE
    (57) reservation -> . RESERVE NUMBER FOR error ON DATE
    (58) reservation -> . RESERVE NUMBER FOR STRING ON error
    (59) listing -> . LIST ALL EVENTS
    (60) listing -> . LIST error
    (61) payment -> . PAY FOR BOOKING BOOKING_ID USING PAYMENT_METHOD
    (62) payment -> . CANCEL BOOKING BOOKING_ID
    (63) payment -> . PAY FOR BOOKING error USING PAYMENT_METHOD
    (64) payment -> . PAY FOR BOOKING BOOKING_ID USING error
    (65) payment -> . CANCEL BOOKING error

    BOOK            shift and go to state 14
    STATUS          shift and go to state 15
    SHOW            shift and go to state 16
    SELECT          shift and go to state 17
    SORT            shift and go to state 18
    FETCH           shift and go to state 19
    RESERVE         shift and go to state 21
    LIST            shift and go to state 22
    PAY             shift and go to state 23
    CANCEL          shift and go to state 24

    booking                        shift and go to state 26
    status                         shift and go to state 27
    view                           shift and go to state 28
    selection                      shift and go to state 29
    sorting                        shift and go to state 30
    fetching                       shift and go to state 31
    region                         shift and go to state 32
    reservation                    shift and go to state 33
    listing                        shift and go to state 34
    payment                        shift and go to state 35

state 2

    (1) command -> booking .

    BOOK            reduce using rule 1 (command -> booking .)
    STATUS          reduce using rule 1 (command -> booking .)
    SHOW            reduce using rule 1 (command -> booking .)
    SELECT          reduce using rule 1 (command -> booking .)
    SORT            reduce using rule 1 (command -> booking .)
    FETCH           reduce using rule 1 (command -> booking .)
    RESERVE         reduce using rule 1 (command -> booking .)
    LIST            reduce using rule 1 (command -> booking .)
    PAY             reduce using rule 1 (command -> booking .)
    CANCEL          reduce using rule 1 (command -> booking .)
    $end            reduce using rule 1 (command -> booking .)


state 3

    (3) command -> status .

    BOOK            reduce using rule 3 (command -> status .)
    STATUS          reduce using rule 3 (command -> status .)
    SHOW            reduce using rule 3 (command -> status .)
    SELECT          reduce using rule 3 (command -> status .)
    SORT            reduce using rule 3 (command -> status .)
    FETCH           reduce using rule 3 (command -> status .)
    RESERVE         reduce using rule 3 (command -> status .)
    LIST            reduce using rule 3 (command -> status .)
    PAY             reduce using rule 3 (command -> status .)
    CANCEL          reduce using rule 3 (command -> status .)
    $end            reduce using rule 3 (command -> status .)


state 4

    (5) command -> view .

    BOOK            reduce using rule 5 (command -> view .)
    STATUS          reduce using rule 5 (command -> view .)
    SHOW            reduce using rule 5 (command -> view .)
    SELECT          reduce using rule 5 (command -> view .)
    SORT            reduce using rule 5 (command -> view .)
    FETCH           reduce using rule 5 (command -> view .)
    RESERVE         reduce using rule 5 (command -> view .)
    LIST            reduce using rule 5 (command -> view .)
    PAY             reduce using rule 5 (command -> view .)
    CANCEL          reduce using rule 5 (command -> view .)
    $end            reduce using rule 5 (command -> view .)


state 5

    (7) command -> selection .

    BOOK            reduce using rule 7 (command -> selection .)
    STATUS          reduce using rule 7 (command -> selection .)
    SHOW            reduce using rule 7 (command -> selection .)
    SELECT          reduce using rule 7 (command -> selection .)
    SORT            reduce using rule 7 (command -> selection .)
    FETCH           reduce using rule 7 (command -> selection .)
    RESERVE         reduce using rule 7 (command -> selection .)
    LIST            reduce using rule 7 (command -> selection .)
    PAY             reduce using rule 7 (command -> selection .)
    CANCEL          reduce using rule 7 (command -> selection .)
    $end            reduce using rule 7 (command -> selection .)


state 6

    (9) command -> sorting .

    BOOK            reduce using rule 9 (command -> sorting .)
    STATUS          reduce using rule 9 (command -> sorting .)
    SHOW            reduce using rule 9 (command -> sorting .)
    SELECT          reduce using rule 9 (command -> sorting .)
    SORT            reduce using rule 9 (command -> sorting .)
    FETCH           reduce using rule 9 (command -> sorting .)
    RESERVE         reduce using rule 9 (command -> sorting .)
    LIST            reduce using rule 9 (command -> sorting .)
    PAY             reduce using rule 9 (command -> sorting .)
    CANCEL          reduce using rule 9 (command -> sorting .)
    $end            reduce using rule 9 (command -> sorting .)


state 7

    (11) command -> fetching .

    BOOK            reduce using rule 11 (command -> fetching .)
    STATUS          reduce using rule 11 (command -> fetching .)
    SHOW            reduce using rule 11 (command -> fetching .)
    SELECT          reduce using rule 11 (command -> fetching .)
    SORT            reduce using rule 11 (command -> fetching .)
    FETCH           reduce using rule 11 (command -> fetching .)
    RESERVE         reduce using rule 11 (command -> fetching .)
    LIST            reduce using rule 11 (command -> fetching .)
    PAY             reduce using rule 11 (command -> fetching .)
    CANCEL          reduce using rule 11 (command -> fetching .)
    $end            reduce using rule 11 (command -> fetching .)


state 8

    (13) command -> speech .

    BOOK            reduce using rule 13 (command -> speech .)
    STATUS          reduce using rule 13 (command -> speech .)
    SHOW            reduce using rule 13 (command -> speech .)
    SELECT          reduce using rule 13 (command -> speech .)
    SORT            reduce using rule 13 (command -> speech .)
    FETCH           reduce using rule 13 (command -> speech .)
    RESERVE         reduce using rule 13 (command -> speech .)
    LIST            reduce using rule 13 (command -> speech .)
    PAY             reduce using rule 13 (command -> speech .)
    CANCEL          reduce using rule 13 (command -> speech .)
    $end            reduce using rule 13 (command -> speech .)


state 9

    (14) command -> region .

    BOOK            reduce using rule 14 (command -> region .)
    STATUS          reduce using rule 14 (command -> region .)
    SHOW            reduce using rule 14 (command -> region .)
    SELECT          reduce using rule 14 (command -> region .)
    SORT            reduce using rule 14 (command -> region .)
    FETCH           reduce using rule 14 (command -> region .)
    RESERVE         reduce using rule 14 (command -> region .)
    LIST            reduce using rule 14 (command -> region .)
    PAY             reduce using rule 14 (command -> region .)
    CANCEL          reduce using rule 14 (command -> region .)
    $end            reduce using rule 14 (command -> region .)


state 10

    (16) command -> reservation .

    BOOK            reduce using rule 16 (command -> reservation .)
    STATUS          reduce using rule 16 (command -> reservation .)
    SHOW            reduce using rule 16 (command -> reservation .)
    SELECT          reduce using rule 16 (command -> reservation .)
    SORT            reduce using rule 16 (command -> reservation .)
    FETCH           reduce using rule 16 (command -> reservation .)
    RESERVE         reduce using rule 16 (command -> reservation .)
    LIST            reduce using rule 16 (command -> reservation .)
    PAY             reduce using rule 16 (command -> reservation .)
    CANCEL          reduce using rule 16 (command -> reservation .)
    $end            reduce using rule 16 (command -> reservation .)


state 11

    (18) command -> listing .

    BOOK            reduce using rule 18 (command -> listing .)
    STATUS          reduce using rule 18 (command -> listing .)
    SHOW            reduce using rule 18 (command -> listing .)
    SELECT          reduce using rule 18 (command -> listing .)
    SORT            reduce using rule 18 (command -> listing .)
    FETCH           reduce using rule 18 (command -> listing .)
    RESERVE         reduce using rule 18 (command -> listing .)
    LIST            reduce using rule 18 (command -> listing .)
    PAY             reduce using rule 18 (command -> listing .)
    CANCEL          reduce using rule 18 (command -> listing .)
    $end            reduce using rule 18 (command -> listing .)


state 12

    (20) command -> payment .

    BOOK            reduce using rule 20 (command -> payment .)
    STATUS          reduce using rule 20 (command -> payment .)
    SHOW            reduce using rule 20 (command -> payment .)
    SELECT          reduce using rule 20 (command -> payment .)
    SORT            reduce using rule 20 (command -> payment .)
    FETCH           reduce using rule 20 (command -> payment .)
    RESERVE         reduce using rule 20 (command -> payment .)
    LIST            reduce using rule 20 (command -> payment .)
    PAY             reduce using rule 20 (command -> payment .)
    CANCEL          reduce using rule 20 (command -> payment .)
    $end            reduce using rule 20 (command -> payment .)


state 13

    (22) command -> dummy .

    BOOK            reduce using rule 22 (command -> dummy .)
    STATUS          reduce using rule 22 (command -> dummy .)
    SHOW            reduce using rule 22 (command -> dummy .)
    SELECT          reduce using rule 22 (command -> dummy .)
    SORT            reduce using rule 22 (command -> dummy .)
    FETCH           reduce using rule 22 (command -> dummy .)
    RESERVE         reduce using rule 22 (command -> dummy .)
    LIST            reduce using rule 22 (command -> dummy .)
    PAY             reduce using rule 22 (command -> dummy .)
    CANCEL          reduce using rule 22 (command -> dummy .)
    $end            reduce using rule 22 (command -> dummy .)


state 14

    (24) booking -> BOOK . NUMBER TICKETS FOR STRING ON DATE
    (25) booking -> BOOK . NUMBER TICKETS FOR STRING ON
    (26) booking -> BOOK . error TICKETS FOR STRING ON DATE
    (27) booking -> BOOK . NUMBER TICKETS FOR STRING ON error
    (28) booking -> BOOK . NUMBER TICKETS FOR error ON DATE
    (29) booking -> BOOK . error TICKETS FOR error ON DATE

    NUMBER          shift and go to state 36
    error           shift and go to state 37


state 15

    (30) status -> STATUS . OF BOOKING BOOKING_ID
    (31) status -> STATUS . OF TICKETS
    (32) status -> STATUS . OF BOOKING error
    (33) status -> STATUS . OF error
    (34) status -> STATUS . OF

    OF              shift and go to state 38


state 16

    (35) view -> SHOW . AVAILABLE TICKETS FOR STRING
    (36) view -> SHOW . MY RESERVATIONS
    (37) view -> SHOW . MY CONFIRMED BOOKINGS
    (38) view -> SHOW . MY PAID TICKETS
    (39) view -> SHOW . MY CANCELED BOOKINGS
    (40) view -> SHOW . AVAILABLE TICKETS FOR error
    (41) view -> SHOW . MY error
    (42) view -> SHOW . MY error BOOKINGS
    (43) view -> SHOW . MY error TICKETS
    (53) region -> SHOW . AVAILABLE TICKETS IN REGION
    (54) region -> SHOW . AVAILABLE TICKETS error

    AVAILABLE       shift and go to state 39
    MY              shift and go to state 40


state 17

    (44) selection -> SELECT . TICKET TICKET_ID
    (45) selection -> SELECT . TICKET error

    TICKET          shift and go to state 41


state 18

    (46) sorting -> SORT . TICKETS BY NUMBER
    (47) sorting -> SORT . TICKETS BY DATE
    (48) sorting -> SORT . TICKETS BY error

    TICKETS         shift and go to state 42


state 19

    (49) fetching -> FETCH . TICKETS FROM API API_URL
    (50) fetching -> FETCH . TICKETS FROM API error

    TICKETS         shift and go to state 43


state 20

    (51) speech -> READ . OUT MY BOOKING DETAILS
    (52) speech -> READ . AVAILABLE TICKETS FOR STRING

    OUT             shift and go to state 44
    AVAILABLE       shift and go to state 45


state 21

    (55) reservation -> RESERVE . NUMBER FOR STRING ON DATE
    (56) reservation -> RESERVE . error FOR STRING ON DATE
    (57) reservation -> RESERVE . NUMBER FOR error ON DATE
    (58) reservation -> RESERVE . NUMBER FOR STRING ON error

    NUMBER          shift and go to state 46
    error           shift and go to state 47


state 22

    (59) listing -> LIST . ALL EVENTS
    (60) listing -> LIST . error

    ALL             shift and go to state 48
    error           shift and go to state 49


state 23

    (61) payment -> PAY . FOR BOOKING BOOKING_ID USING PAYMENT_METHOD
    (63) payment -> PAY . FOR BOOKING error USING PAYMENT_METHOD
    (64) payment -> PAY . FOR BOOKING BOOKING_ID USING error

    FOR             shift and go to state 50


state 24

    (62) payment -> CANCEL . BOOKING BOOKING_ID
    (65) payment -> CANCEL . BOOKING error

    BOOKING         shift and go to state 51


state 25

    (23) dummy -> ID .

    BOOK            reduce using rule 23 (dummy -> ID .)
    STATUS          reduce using rule 23 (dummy -> ID .)
    SHOW            reduce using rule 23 (dummy -> ID .)
    SELECT          reduce using rule 23 (dummy -> ID .)
    SORT            reduce using rule 23 (dummy -> ID .)
    FETCH           reduce using rule 23 (dummy -> ID .)
    RESERVE         reduce using rule 23 (dummy -> ID .)
    LIST            reduce using rule 23 (dummy -> ID .)
    PAY             reduce using rule 23 (dummy -> ID .)
    CANCEL          reduce using rule 23 (dummy -> ID .)
    $end            reduce using rule 23 (dummy -> ID .)


state 26

    (2) command -> command booking .

    BOOK            reduce using rule 2 (command -> command booking .)
    STATUS          reduce using rule 2 (command -> command booking .)
    SHOW            reduce using rule 2 (command -> command booking .)
    SELECT          reduce using rule 2 (command -> command booking .)
    SORT            reduce using rule 2 (command -> command booking .)
    FETCH           reduce using rule 2 (command -> command booking .)
    RESERVE         reduce using rule 2 (command -> command booking .)
    LIST            reduce using rule 2 (command -> command booking .)
    PAY             reduce using rule 2 (command -> command booking .)
    CANCEL          reduce using rule 2 (command -> command booking .)
    $end            reduce using rule 2 (command -> command booking .)


state 27

    (4) command -> command status .

    BOOK            reduce using rule 4 (command -> command status .)
    STATUS          reduce using rule 4 (command -> command status .)
    SHOW            reduce using rule 4 (command -> command status .)
    SELECT          reduce using rule 4 (command -> command status .)
    SORT            reduce using rule 4 (command -> command status .)
    FETCH           reduce using rule 4 (command -> command status .)
    RESERVE         reduce using rule 4 (command -> command status .)
    LIST            reduce using rule 4 (command -> command status .)
    PAY             reduce using rule 4 (command -> command status .)
    CANCEL          reduce using rule 4 (command -> command status .)
    $end            reduce using rule 4 (command -> command status .)


state 28

    (6) command -> command view .

    BOOK            reduce using rule 6 (command -> command view .)
    STATUS          reduce using rule 6 (command -> command view .)
    SHOW            reduce using rule 6 (command -> command view .)
    SELECT          reduce using rule 6 (command -> command view .)
    SORT            reduce using rule 6 (command -> command view .)
    FETCH           reduce using rule 6 (command -> command view .)
    RESERVE         reduce using rule 6 (command -> command view .)
    LIST            reduce using rule 6 (command -> command view .)
    PAY             reduce using rule 6 (command -> command view .)
    CANCEL          reduce using rule 6 (command -> command view .)
    $end            reduce using rule 6 (command -> command view .)


state 29

    (8) command -> command selection .

    BOOK            reduce using rule 8 (command -> command selection .)
    STATUS          reduce using rule 8 (command -> command selection .)
    SHOW            reduce using rule 8 (command -> command selection .)
    SELECT          reduce using rule 8 (command -> command selection .)
    SORT            reduce using rule 8 (command -> command selection .)
    FETCH           reduce using rule 8 (command -> command selection .)
    RESERVE         reduce using rule 8 (command -> command selection .)
    LIST            reduce using rule 8 (command -> command selection .)
    PAY             reduce using rule 8 (command -> command selection .)
    CANCEL          reduce using rule 8 (command -> command selection .)
    $end            reduce using rule 8 (command -> command selection .)


state 30

    (10) command -> command sorting .

    BOOK            reduce using rule 10 (command -> command sorting .)
    STATUS          reduce using rule 10 (command -> command sorting .)
    SHOW            reduce using rule 10 (command -> command sorting .)
    SELECT          reduce using rule 10 (command -> command sorting .)
    SORT            reduce using rule 10 (command -> command sorting .)
    FETCH           reduce using rule 10 (command -> command sorting .)
    RESERVE         reduce using rule 10 (command -> command sorting .)
    LIST            reduce using rule 10 (command -> command sorting .)
    PAY             reduce using rule 10 (command -> command sorting .)
    CANCEL          reduce using rule 10 (command -> command sorting .)
    $end            reduce using rule 10 (command -> command sorting .)


state 31

    (12) command -> command fetching .

    BOOK            reduce using rule 12 (command -> command fetching .)
    STATUS          reduce using rule 12 (command -> command fetching .)
    SHOW            reduce using rule 12 (command -> command fetching .)
    SELECT          reduce using rule 12 (command -> command fetching .)
    SORT            reduce using rule 12 (command -> command fetching .)
    FETCH           reduce using rule 12 (command -> command fetching .)
    RESERVE         reduce using rule 12 (command -> command fetching .)
    LIST            reduce using rule 12 (command -> command fetching .)
    PAY             reduce using rule 12 (command -> command fetching .)
    CANCEL          reduce using rule 12 (command -> command fetching .)
    $end            reduce using rule 12 (command -> command fetching .)


state 32

    (15) command -> command region .

    BOOK            reduce using rule 15 (command -> command region .)
    STATUS          reduce using rule 15 (command -> command region .)
    SHOW            reduce using rule 15 (command -> command region .)
    SELECT          reduce using rule 15 (command -> command region .)
    SORT            reduce using rule 15 (command -> command region .)
    FETCH           reduce using rule 15 (command -> command region .)
    RESERVE         reduce using rule 15 (command -> command region .)
    LIST            reduce using rule 15 (command -> command region .)
    PAY             reduce using rule 15 (command -> command region .)
    CANCEL          reduce using rule 15 (command -> command region .)
    $end            reduce using rule 15 (command -> command region .)


state 33

    (17) command -> command reservation .

    BOOK            reduce using rule 17 (command -> command reservation .)
    STATUS          reduce using rule 17 (command -> command reservation .)
    SHOW            reduce using rule 17 (command -> command reservation .)
    SELECT          reduce using rule 17 (command -> command reservation .)
    SORT            reduce using rule 17 (command -> command reservation .)
    FETCH           reduce using rule 17 (command -> command reservation .)
    RESERVE         reduce using rule 17 (command -> command reservation .)
    LIST            reduce using rule 17 (command -> command reservation .)
    PAY             reduce using rule 17 (command -> command reservation .)
    CANCEL          reduce using rule 17 (command -> command reservation .)
    $end            reduce using rule 17 (command -> command reservation .)


state 34

    (19) command -> command listing .

    BOOK            reduce using rule 19 (command -> command listing .)
    STATUS          reduce using rule 19 (command -> command listing .)
    SHOW            reduce using rule 19 (command -> command listing .)
    SELECT          reduce using rule 19 (command -> command listing .)
    SORT            reduce using rule 19 (command -> command listing .)
    FETCH           reduce using rule 19 (command -> command listing .)
    RESERVE         reduce using rule 19 (command -> command listing .)
    LIST            reduce using rule 19 (command -> command listing .)
    PAY             reduce using rule 19 (command -> command listing .)
    CANCEL          reduce using rule 19 (command -> command listing .)
    $end            reduce using rule 19 (command -> command listing .)


state 35

    (21) command -> command payment .

    BOOK            reduce using rule 21 (command -> command payment .)
    STATUS          reduce using rule 21 (command -> command payment .)
    SHOW            reduce using rule 21 (command -> command payment .)
    SELECT          reduce using rule 21 (command -> command payment .)
    SORT            reduce using rule 21 (command -> command payment .)
    FETCH           reduce using rule 21 (command -> command payment .)
    RESERVE         reduce using rule 21 (command -> command payment .)
    LIST            reduce using rule 21 (command -> command payment .)
    PAY             reduce using rule 21 (command -> command payment .)
    CANCEL          reduce using rule 21 (command -> command payment .)
    $end            reduce using rule 21 (command -> command payment .)


state 36

    (24) booking -> BOOK NUMBER . TICKETS FOR STRING ON DATE
    (25) booking -> BOOK NUMBER . TICKETS FOR STRING ON
    (27) booking -> BOOK NUMBER . TICKETS FOR STRING ON error
    (28) booking -> BOOK NUMBER . TICKETS FOR error ON DATE

    TICKETS         shift and go to state 52


state 37

    (26) booking -> BOOK error . TICKETS FOR STRING ON DATE
    (29) booking -> BOOK error . TICKETS FOR error ON DATE

    TICKETS         shift and go to state 53


state 38

    (30) status -> STATUS OF . BOOKING BOOKING_ID
    (31) status -> STATUS OF . TICKETS
    (32) status -> STATUS OF . BOOKING error
    (33) status -> STATUS OF . error
    (34) status -> STATUS OF .

    BOOKING         shift and go to state 54
    TICKETS         shift and go to state 55
    error           shift and go to state 56
    BOOK            reduce using rule 34 (status -> STATUS OF .)
    STATUS          reduce using rule 34 (status -> STATUS OF .)
    SHOW            reduce using rule 34 (status -> STATUS OF .)
    SELECT          reduce using rule 34 (status -> STATUS OF .)
    SORT            reduce using rule 34 (status -> STATUS OF .)
    FETCH           reduce using rule 34 (status -> STATUS OF .)
    RESERVE         reduce using rule 34 (status -> STATUS OF .)
    LIST            reduce using rule 34 (status -> STATUS OF .)
    PAY             reduce using rule 34 (status -> STATUS OF .)
    CANCEL          reduce using rule 34 (status -> STATUS OF .)
    $end            reduce using rule 34 (status -> STATUS OF .)


state 39

    (35) view -> SHOW AVAILABLE . TICKETS FOR STRING
    (40) view -> SHOW AVAILABLE . TICKETS FOR error
    (53) region -> SHOW AVAILABLE . TICKETS IN REGION
    (54) region -> SHOW AVAILABLE . TICKETS error

    TICKETS         shift and go to state 57


state 40
